include/ishtar.h

struct ishtar_class_t;
struct ishtar_object_t;
struct RuntimeIshtarAlias_Method;
struct RuntimeIshtarAlias_Type;
struct ishtar_module_t;
struct RuntimeComplexType;
typedef enum gc_flags_t {
    NONE = 0,
    NATIVE_REF = 2,
    IMMORTAL = 4,
} gc_flags_t;
typedef enum gc_color_t {
    RED = 0,
    YELLOW = 1,
    GREEN = 2,
} gc_color_t;
typedef enum class_flag_t {
    CLASS_NONE = 0,
    CLASS_PUBLIC = 2,
    CLASS_STATIC = 4,
    CLASS_INTERNAL = 8,
    CLASS_PROTECTED = 16,
    CLASS_PRIVATE = 32,
    CLASS_ABSTRACT = 64,
    CLASS_SPECIAL = 128,
    CLASS_INTERFACE = 256,
    CLASS_ASPECT = 512,
    CLASS_UNDEFINED = 1024,
    CLASS_UNRESOLVED = 2048,
    CLASS_PREDEFINED = 4096,
    CLASS_NOTCOMPLETED = 8192,
    CLASS_AMORPHOUS = 16384,
} class_flag_t;
typedef enum field_flag_t {
    FIELD_NONE = 0,
    FIELD_LITERAL = 2,
    FIELD_PUBLIC = 4,
    FIELD_STATIC = 8,
    FIELD_PROTECTED = 16,
    FIELD_VIRTUAL = 32,
    FIELD_ABSTRACT = 64,
    FIELD_OVERRIDE = 128,
    FIELD_SPECIAL = 256,
    FIELD_READONLY = 512,
    FIELD_INTERNAL = 1024,
} field_flag_t;
typedef struct ishtar_version_t {
    uint32_t major;
    uint32_t minor;
    uint32_t patch;
    uint32_t build;
} ishtar_version_t;
typedef struct ishtar_object_t {
    struct ishtar_class_t* clazz;
    void* vtable;
    gc_flags_t flags;
    gc_color_t color;
    uint64_t refs_size;
    uint32_t vtable_size;
    int64_t __gc_id;
    int64_t m1;
    int64_t m2;
} ishtar_object_t;
typedef struct ishtar_rtoken_t {
    uint64_t value;
    uint32_t module_i_d;
    uint32_t class_i_d;
} ishtar_rtoken_t;
typedef struct ishtar_string_t {
    uint64_t id;
    uint64_t i_d;
} ishtar_string_t;
typedef struct RuntimeIshtarAlias_Method {
    void* name;
    void* method;
} RuntimeIshtarAlias_Method;
typedef struct RuntimeIshtarAlias_Type {
    void* name;
    struct ishtar_class_t* _class;
} RuntimeIshtarAlias_Type;
typedef struct RuntimeIshtarAlias {
    union { /* Offset: 0 */
        uint8_t kind;
    };
    union { /* Offset: 1 */
        RuntimeIshtarAlias_Method method;
        RuntimeIshtarAlias_Type type;
    };
} RuntimeIshtarAlias;
typedef struct ishtar_class_t {
    void* _self_reference;
    void* methods;
    void* fields;
    void* aspects;
    struct ishtar_module_t* owner;
    struct ishtar_class_t* parent;
    void* full_name;
    bool _is_disposed;
    int32_t type_code;
    class_flag_t flags;
    struct ishtar_rtoken_t runtime_token;
    uint32_t i_d;
    uint16_t magic1;
    uint16_t magic2;
    uint64_t computed_size;
    bool is_inited;
    void* vtable;
    uint64_t vtable_size;
} ishtar_class_t;
typedef struct RuntimeComplexType {
    void* _type_arg;
    struct ishtar_class_t* _class;
} RuntimeComplexType;
typedef struct RuntimeIshtarField {
    struct ishtar_class_t* owner;
    struct RuntimeComplexType field_type;
    uint64_t vtable_offset;
    field_flag_t flags;
    void* full_name;
    void* aspects;
    struct ishtar_object_t* default_value;
    void* _self_ref;
} RuntimeIshtarField;
typedef struct ishtar_module_t {
    void* vault;
    uint32_t i_d;
    struct ishtar_version_t version;
    void* alias_table;
    void* class_table;
    void* deps_table;
    void* aspects_table;
    void* types_table;
    void* generics_table;
    void* fields_table;
    void* string_table;
    void* const_storage;
    struct ishtar_string_t* _name;
    struct ishtar_module_t* _self;
    struct ishtar_class_t* bootstrapper;
} ishtar_module_t;