include/ishtar.rs

#[test]
fn bindgen_test_layout_RuntimeIshtarAlias_Type() {
    const UNINIT: ::std::mem::MaybeUninit<RuntimeIshtarAlias_Type> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<RuntimeIshtarAlias_Type>(),
        16usize,
        concat!("Size of: ", stringify!(RuntimeIshtarAlias_Type))
    );
    assert_eq!(
        ::std::mem::align_of::<RuntimeIshtarAlias_Type>(),
        8usize,
        concat!("Alignment of ", stringify!(RuntimeIshtarAlias_Type))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeIshtarAlias_Type),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._class) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeIshtarAlias_Type),
            "::",
            stringify!(_class)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct RuntimeIshtarAlias {
    pub __bindgen_anon_1: RuntimeIshtarAlias__bindgen_ty_1,
    pub __bindgen_anon_2: RuntimeIshtarAlias__bindgen_ty_2,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union RuntimeIshtarAlias__bindgen_ty_1 {
    pub kind: u8,
}
#[test]
fn bindgen_test_layout_RuntimeIshtarAlias__bindgen_ty_1() {
    const UNINIT: ::std::mem::MaybeUninit<RuntimeIshtarAlias__bindgen_ty_1> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<RuntimeIshtarAlias__bindgen_ty_1>(),
        1usize,
        concat!("Size of: ", stringify!(RuntimeIshtarAlias__bindgen_ty_1))
    );
    assert_eq!(
        ::std::mem::align_of::<RuntimeIshtarAlias__bindgen_ty_1>(),
        1usize,
        concat!(
            "Alignment of ",
            stringify!(RuntimeIshtarAlias__bindgen_ty_1)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).kind) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeIshtarAlias__bindgen_ty_1),
            "::",
            stringify!(kind)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union RuntimeIshtarAlias__bindgen_ty_2 {
    pub method: RuntimeIshtarAlias_Method,
    pub type_: RuntimeIshtarAlias_Type,
}
#[test]
fn bindgen_test_layout_RuntimeIshtarAlias__bindgen_ty_2() {
    const UNINIT: ::std::mem::MaybeUninit<RuntimeIshtarAlias__bindgen_ty_2> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<RuntimeIshtarAlias__bindgen_ty_2>(),
        16usize,
        concat!("Size of: ", stringify!(RuntimeIshtarAlias__bindgen_ty_2))
    );
    assert_eq!(
        ::std::mem::align_of::<RuntimeIshtarAlias__bindgen_ty_2>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(RuntimeIshtarAlias__bindgen_ty_2)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).method) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeIshtarAlias__bindgen_ty_2),
            "::",
            stringify!(method)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeIshtarAlias__bindgen_ty_2),
            "::",
            stringify!(type_)
        )
    );
}
#[test]
fn bindgen_test_layout_RuntimeIshtarAlias() {
    assert_eq!(
        ::std::mem::size_of::<RuntimeIshtarAlias>(),
        24usize,
        concat!("Size of: ", stringify!(RuntimeIshtarAlias))
    );
    assert_eq!(
        ::std::mem::align_of::<RuntimeIshtarAlias>(),
        8usize,
        concat!("Alignment of ", stringify!(RuntimeIshtarAlias))
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_class_t {
    pub _self_reference: *mut ::std::os::raw::c_void,
    pub methods: *mut ::std::os::raw::c_void,
    pub fields: *mut ::std::os::raw::c_void,
    pub aspects: *mut ::std::os::raw::c_void,
    pub owner: *mut ishtar_module_t,
    pub parent: *mut ishtar_class_t,
    pub full_name: *mut ::std::os::raw::c_void,
    pub _is_disposed: bool,
    pub type_code: i32,
    pub flags: class_flag_t,
    pub runtime_token: ishtar_rtoken_t,
    pub i_d: u32,
    pub magic1: u16,
    pub magic2: u16,
    pub computed_size: u64,
    pub is_inited: bool,
    pub vtable: *mut ::std::os::raw::c_void,
    pub vtable_size: u64,
}
#[test]
fn bindgen_test_layout_ishtar_class_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_class_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_class_t>(),
        128usize,
        concat!("Size of: ", stringify!(ishtar_class_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_class_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ishtar_class_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._self_reference) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_class_t),
            "::",
            stringify!(_self_reference)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).methods) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_class_t),
            "::",
            stringify!(methods)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fields) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_class_t),
            "::",
            stringify!(fields)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).aspects) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_class_t),
            "::",
            stringify!(aspects)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).owner) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_class_t),
            "::",
            stringify!(owner)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_class_t),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).full_name) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_class_t),
            "::",
            stringify!(full_name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._is_disposed) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_class_t),
            "::",
            stringify!(_is_disposed)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).type_code) as usize - ptr as usize },
        60usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_class_t),
            "::",
            stringify!(type_code)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).flags) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_class_t),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).runtime_token) as usize - ptr as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_class_t),
            "::",
            stringify!(runtime_token)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).i_d) as usize - ptr as usize },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_class_t),
            "::",
            stringify!(i_d)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).magic1) as usize - ptr as usize },
        92usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_class_t),
            "::",
            stringify!(magic1)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).magic2) as usize - ptr as usize },
        94usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_class_t),
            "::",
            stringify!(magic2)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).computed_size) as usize - ptr as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_class_t),
            "::",
            stringify!(computed_size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).is_inited) as usize - ptr as usize },
        104usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_class_t),
            "::",
            stringify!(is_inited)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).vtable) as usize - ptr as usize },
        112usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_class_t),
            "::",
            stringify!(vtable)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).vtable_size) as usize - ptr as usize },
        120usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_class_t),
            "::",
            stringify!(vtable_size)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct RuntimeComplexType {
    pub _type_arg: *mut ::std::os::raw::c_void,
    pub _class: *mut ishtar_class_t,
}
#[test]
fn bindgen_test_layout_RuntimeComplexType() {
    const UNINIT: ::std::mem::MaybeUninit<RuntimeComplexType> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<RuntimeComplexType>(),
        16usize,
        concat!("Size of: ", stringify!(RuntimeComplexType))
    );
    assert_eq!(
        ::std::mem::align_of::<RuntimeComplexType>(),
        8usize,
        concat!("Alignment of ", stringify!(RuntimeComplexType))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._type_arg) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeComplexType),
            "::",
            stringify!(_type_arg)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._class) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeComplexType),
            "::",
            stringify!(_class)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct RuntimeIshtarField {
    pub owner: *mut ishtar_class_t,
    pub field_type: RuntimeComplexType,
    pub vtable_offset: u64,
    pub flags: field_flag_t,
    pub full_name: *mut ::std::os::raw::c_void,
    pub aspects: *mut ::std::os::raw::c_void,
    pub default_value: *mut ishtar_object_t,
    pub _self_ref: *mut ::std::os::raw::c_void,
}
